--- a/draft.tex
+++ b/draft.tex
@@ -4,13 +4,14 @@
 %\usepackage{authblk}
 
 \usepackage{graphicx}
-\usepackage{amsmath,amssymb,theorem,enumerate}
+\usepackage{amsmath,amssymb,enumerate,amsthm}
 \usepackage{hyperref}
 \usepackage{mathrsfs}
 \usepackage{algorithm, algpseudocode}
 \usepackage{bm}
 \usepackage{cleveref}
 \usepackage{xcolor}
+\usepackage{booktabs}
 
 \newcommand{\email}[1]{\href{mailto:#1}{#1}}
 \newcommand{\denselist}{\itemsep -2pt\topsep-6pt\partopsep-6pt}
@@ -51,6 +52,9 @@
 
 \algrenewcommand\algorithmicrequire{\textbf{Input:}}
 \algrenewcommand\algorithmicensure{\textbf{Output:}}
+\newtheorem{claim}{Claim}
+\newtheorem{corollary}{Corollary}
+\newtheorem{definition}{Definition}
 
 \title{Robust Winner Determination and Simultaneous Elicitation of Scoring Rules and Preferences}
 %\author{}
@@ -178,7 +182,7 @@ We use $\mathcal{W}$ to denote the set of convex weight vectors.
 % \end{align*}
 %Max regret and minimax regret can be computed using independent completion of partial votes for non-decomposable scoring rules. 
 
-\section{Minimax regret under partial profile and weight information}
+\section[Minimax regret under partial profile and weight information]{Minimax regret under partial profile and weight \\ information}
 
 %The regret-minimizing alternative may not be a possible winner for some voting rules.
 The weights of a scoring rule can model different preferences of the committee. 
@@ -509,4 +513,271 @@ Second, in $\pref^1$, compared to $\pref$, $x$ is $|C|$ positions lower, and $y$
 Now define $\pref^2$ as $\pref^1$ except that the elements from $C' = \{c \pinc y \land \lnot (c \pref^1 x \pref^1 y) \land c \pref^1 y\}$ move just below $y$, respecting in $\pref^2$ their internal ordering in $\pref^1$. Observe that this move keeps property (1), that was satisfied by construction in $\pref^1$, intact, and satisfies property (2). The rest of the reasoning is similar to the previous move, as the situations are symmetric. (To be checked?) Hence, ${\pref^2} \in C(\pref)$ and it satisfies both properties.
 
 Given any $x, y, w$, as $C(\pref)$ has an element maximizing $w[.]$ (by finiteness of the set), the above reasoning shows that some element in $C(\pref)$ satisfies both properties and maximizes $w[.]$. And any element in $C(\pref)$ satisfying both properties attribute the same positions to $x$ and $y$, thus, maximizes $w[.]$.
+
+\section{Considerations on weights}
+\label{sec:weights}
+Let us consider a monotonic non-increasing sequence of weights: $w_{1} \geq w_{2} \geq \ldots \geq w_{m}$. Without loss of generality, we can assume $w_1=1$ and $w_m=0$.
+
+\begin{claim}
+	\label{clm:wsequence}
+	If the weight sequence is convex then $w_{1} > w_{2}$.
+	\[\forall i \in \{1,\ldots,m\} \;\; w_i - w_{i+1} \geq w_{i+1}-w_{i+2} \Rightarrow w_{1} > w_{2} \geq \ldots \geq w_{m}\] 
+\end{claim}
+\begin{proof}
+	By contradiction let assume $w_{1} = w_{2}$ then 
+	\begin{align*}
+	w_{1} - w_{2} \geq w_{2} - w_{3} &\geq \dots \geq w_{m-1} - w_{m} \\
+	1 - 1 \geq 1 - w_{3} &\geq \dots \geq w_{m-1} - 0 \\
+	0 \geq 1 - w_{3} &\geq \dots \geq w_{m-1}
+	\end{align*}
+	At this point either $0\leq w_{3}<1$ or $w_{3}=1$. In the first case 
+	\[0 \ngeq 1 - w_{3}\]
+	This breaks the convexity assumption so it is impossible.
+	In the second case, by definition there is a $w_{i} \neq 1$ where $2 < i \leq m$. So it would be 
+	\[0 \ngeq 1 - w_{i}\]
+	for some $i$. Again, the convexity is not satisfied.
+\end{proof}
+
+\begin{corollary}
+	\label{cor:weq}
+	If the weight sequence is convex and $w_{i} = w_{i+1}$ for some $i$, then $w_{j}=0 \ \forall \
+	j=i, \dots m$.
+\end{corollary}
+
+
+\section{Querying the committee}
+Suppose our query strategy suggests us to ask the committee the following query:
+\[ w_{2} - w_{3} \geq 2(w_{3} - w_{4}) \]
+Then we can transform it in:
+\begin{align}
+\label{eqn:juryquery}
+w_{2} - w_{3} &\geq 2 \cdot w_{3} - 2 \cdot w_{4} \notag \\
+w_{2} + 2 \cdot w_{4} &\geq 3 \cdot w_{3} 
+\end{align}
+and ask the committee if they would prefer as a winner an alternative ranked first one time and third three times rather than an alternative ranked second four times.
+
+Another way to query the committee, a more concrete one, is to present them a profile representing the situation described by the query and then deduce its answer from the selected winner. Obviously we have to be sure to choose a profile where only the alternatives we are interested in could be pick as winners. Therefore, we need a systematic way to construct a profile that reflects the situation outlined by the query for two alternatives and the others are not better than them.
+
+
+Assume we have a profile of $3$ voters ranking $4$ alternatives. We can represent it by columns where each of them represents the preference ordering of one voter.
+\[
+\begin{array}{ccc}
+v_1
+& v_2
+& v_3 \\
+\midrule 
+c
+& d
+& c \\
+a
+& c
+& d \\
+b
+& b
+& b \\
+d
+& a
+& a \\
+\end{array}
+\]
+
+Assuming anonymity, we can also write the profile expressing for each alternative $i \in A$ the number of voters placing it at a given rank.
+
+\[
+\begin{array}{ccccc}
+& 1^\circ
+& 2^\circ
+& 3^\circ
+& 4^\circ \\
+\cmidrule{2-5}
+a 
+& 0
+& 1
+& 0
+& 2 \\
+b
+& 0
+& 0
+& 3
+& 0 \\
+c
+& 2
+& 1
+& 0
+& 0 \\
+d
+& 0
+& 1
+& 1
+& 1 \\
+\end{array}
+\]
+
+Recalling the query (\ref{eqn:juryquery}) we are considering as an example, it is easy to see that in the current profile alternatives $a$ and $b$ represent the situation as described by the query. Therefore, if after proposing this profile to the committee the winning alternative turns out to be $a$ then we know that $w_{2} - w_{3} > 2(w_{3} - w_{4})$; if, instead, the winner is $b$ we know that $w_{2} - w_{3} < 2(w_{3} - w_{4})$ and if both alternatives are picked as winners then $w_{2} - w_{3} = 2(w_{3} - w_{4})$. 
+
+Nevertheless, in this example it is clear that $c$ will always be preferred to other alternatives (see Claim \ref{clm:wsequence} in Section \ref{sec:weights}). To see it we can express for each alternative the number of voters placing it at a given rank or at a higher one.
+
+\[
+\begin{array}{ccccc}
+& \geq 1^\circ
+& \geq 2^\circ
+& \geq 3^\circ
+& \geq 4^\circ \\
+\cmidrule{2-5}
+a 
+& 0
+& 1
+& 1
+& 3 \\
+b
+& 0
+& 0
+& 3
+& 3 \\
+c
+& 2
+& 3
+& 3
+& 3 \\
+d
+& 0
+& 1
+& 2
+& 3 \\
+\end{array}
+\]
+
+
+\begin{claim}
+	Consider a set $A$ of $m$ alternatives and let $r_k(i)$ be the number of times the alternative $i$ obtains a rank $k$ or a higher one. Consider two alternatives $ i,j \in A$, if $\forall \ k=2, \dots,m \ r_k(i)\geq r_k(j)$ and $r_1(i) > r_1(j)$ then $i$ is always preferred to $j$ for any choice of weights.
+\end{claim}
+
+\begin{proof}
+	For our assumptions we know the sequence of weights is monotonic non-increasing and convex. Moreover, for the Claim \ref{clm:wsequence} in Section \ref{sec:weights}, we know that $w_1 > w_2$. Therefore, even in the worst case where $r_k(i) = r_k(j) \ forall \ k=2, \dots,m$ the sum of weights for alternative $i$ cannot be lower than the one for $j$. It is worth noting that we cannot say anything when $r_1(i) = r_1(j)$. Indeed, as said in Corollary \ref{cor:weq}, all the weights for other position but the first one can be equal, thus the number of voters ranking the alternatives at a certain position does not matter anymore.	
+\end{proof}
+
+So the strategy for querying the committee is to use two alternatives $i$ and $j$ to represent the query and complete the profile such that the other alternatives are all dominated by them. An algorithmic approach is to start from the initial profile and then add as many voters as needed that rank $i$ and $j$ as their top choices and the other alternatives afterwards. As an example let consider again the query \ref*{eqn:juryquery}. We want the committee to choose between $a$ or $b$:
+
+\[
+\begin{array}{ccccc}
+& 1^\circ
+& 2^\circ
+& 3^\circ
+& 4^\circ \\
+\cmidrule{2-5}
+a 
+& 0
+& 1
+& 0
+& 2 \\
+b
+& 0
+& 0
+& 3
+& 0 \\
+\end{array}
+\]
+
+We add voters in order to increase the number of times $a$ and $b$ are ranked at first position. Please note we must maintain these scheme, so every add of a position to the ranking of $a$ must correspond to the same in the ranking of $b$.
+
+\[
+\begin{array}{cccccc}
+v_1
+& v_2
+& v_3 
+& v_4
+& v_5
+& v_6 \\
+\midrule 
+a
+& b
+& c 
+& d
+& a
+& b \\
+c
+& a
+& d
+& c
+& b
+& a \\
+b
+& d
+& b
+& b
+& d
+& c \\
+d
+& c
+& a
+& a
+& c
+& d \\
+\end{array}
+\]
+
+\[
+\begin{array}{ccccc}
+& 1^\circ
+& 2^\circ
+& 3^\circ
+& 4^\circ \\
+\cmidrule{2-5}
+a 
+& 2
+& 2
+& 0
+& 2 \\
+b
+& 2
+& 1
+& 3
+& 0 \\
+c
+& 1
+& 2
+& 1
+& 2 \\
+d
+& 1
+& 1
+& 2
+& 2 \\
+\end{array}
+\]
+
+\[
+\begin{array}{ccccc}
+& \geq 1^\circ
+& \geq 2^\circ
+& \geq 3^\circ
+& \geq 4^\circ \\
+\cmidrule{2-5}
+a 
+& 2
+& 4
+& 4
+& 6 \\
+b
+& 2
+& 3
+& 6
+& 6 \\
+c
+& 1
+& 3
+& 4
+& 6 \\
+d
+& 1
+& 2
+& 4
+& 6 \\
+\end{array}
+\]
+\textbf{Remarks:}
+\begin{itemize}
+	\item We are considering $\lambda \in \mathbb{N} \setminus \{0\}$ but we could be interested in a real number. \textit{Solution}: we can multiply both sides.
+\end{itemize}
+
 \end{document}  
