--- a/biblio.bib
+++ b/biblio.bib
@@ -9,6 +9,35 @@
 	year = "2006"
 }
 
+@inproceedings{Cailloux2014,
+	author    = {Olivier Cailloux and
+	Ulle Endriss},
+	title     = {Eliciting a Suitable Voting Rule via Examples},
+	booktitle = {{ECAI} 2014 - 21st European Conference on Artificial Intelligence,
+	18-22 August 2014, Prague, Czech Republic - Including Prestigious
+	Applications of Intelligent Systems {(PAIS} 2014)},
+	pages     = {183--188},
+	year      = {2014},
+	doi       = {10.3233/978-1-61499-419-0-183},
+	timestamp = {Wed, 24 May 2017 08:27:19 +0200}
+}
+
+@article{Llamazares2013,
+	author    = {Bonifacio Llamazares and
+	Teresa Pe{\~{n}}a},
+	title     = {Aggregating preferences rankings with variable weights},
+	journal   = {European Journal of Operational Research},
+	volume    = {230},
+	number    = {2},
+	pages     = {348--355},
+	year      = {2013},
+	url       = {https://doi.org/10.1016/j.ejor.2013.04.013},
+	doi       = {10.1016/j.ejor.2013.04.013},
+	timestamp = {Thu, 15 Jun 2017 21:31:49 +0200},
+	biburl    = {http://dblp.org/rec/bib/journals/eor/LlamazaresP13},
+	bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
 @inproceedings{Lu2011,
   author    = {Tyler Lu and
                Craig Boutilier},
