--- a/draft.tex
+++ b/draft.tex
@@ -90,6 +90,7 @@ In this draft we provide a method for approximate winner determination and an in
 \item Incremental elicitation of preferences can help mitigating the cognitive and communication costs
 \item Novelty of the proposed method
 \item Structure of the paper
+\item References: \cite{Cailloux2014}, \cite{Llamazares2013}
 \end{itemize}
 
 Aggregation of preference information is a central task in many computer systems (recommender systems, search engines, etc).
