yet more preferences

--- a/biblio.bib
+++ b/biblio.bib
@@ -22,6 +22,28 @@
 	timestamp = {Wed, 24 May 2017 08:27:19 +0200}
 }
 
+@article{Kalech2011,
+	author    = {Meir Kalech and
+	Sarit Kraus and
+	Gal A. Kaminka and
+	Claudia V. Goldman},
+	title     = {Practical voting rules with partial information},
+	journal   = {Autonomous Agents and Multi-Agent Systems},
+	volume    = {22},
+	number    = {1},
+	pages     = {151--182},
+	year      = {2011}
+}
+
+@inproceedings{Konczak05,
+	Author = {Kathrin Konczak and Jerome Lang},
+	Booktitle = {IJCAI Workshop on Advances in Preference Handling},
+	Pages = {124--129},
+	Title = {Voting Procedures with Incomplete Preferences},
+	keywords = {voting, social choice, preferences},
+	Year = {2005}
+}
+
 @article{Llamazares2013,
 	author    = {Bonifacio Llamazares and
 	Teresa Pe{\~{n}}a},
@@ -45,6 +67,19 @@
   booktitle = {Proceedings of {IJCAI} 2011},
   pages     = {287--293},
   year      = {2011}
+}
+
+@article{Pini2009,
+	author    = {Maria Silvia Pini and
+	Francesca Rossi and
+	Kristen Brent Venable and
+	Toby Walsh},
+	title     = {Aggregating Partially Ordered Preferences},
+	journal   = {J. Log. Comput.},
+	volume    = {19},
+	number    = {3},
+	pages     = {475--502},
+	year      = {2009}
 }
 
 @article{Stein1994,
